@@ -1,3 +1,12 @@
+2006-06-15 00:51 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Added
+	new method declarations.
+	* Source/GSNibCompatibility.m: Added isInterfaceBuilder method
+	here.
+	* Source/NSDocument.m: Added code to prevent the popup from
+	showing blank when the fileType is set to a non-Editor type.
+
 2006-06-11  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSTextView_actions.m (-deleteToEndOfLine:): New method
